v1.6.3 - Pending
	+ Library artwork caching/displaying improvements
	+ Lyricwiki screen scraping workaround
	+ Bug: Fix library sorting when adding, e.g., albums to playlist
	+ Bug: Fix window positioning weirdness when unwithdrawing from systray
	+ Bug: Fix album being labeled various artists when a duplicate exists
	+ Bug: Fix album tracks in the info tab being out of order sometimes
	+ Bug: Show songs with a missing date in info album listing
	+ Bug: Library icons change after adding stream to playlist
	+ Bug: Cpu spike, tooltips missing in library search results with gtk 2.16.2

v1.6.2 - April 13, 2009
	+ Bug: Fix cli options (e.g. 'sonata play')

v1.6.1 - April 11, 2009
	+ Reduce library's filesystem view row height
	+ More auto-applying of preferences (e.g. format tab)
	+ Bug: Fix python version check for Ubuntu Jaunty
	+ Bug: Traceback if track has multiple date tags
	+ Bug: Fix infinite loop when format strings end in '{'
	+ Bug: Fix music directory chooser selecting the wrong folder sometimes
	+ Bug: Catch OSErrors from os.listdir, e.g. flac files with cue sheets
	+ Bug: Fix --profile option

v1.6 - March 29, 2009
	+ Album browsing mode, additional details in library views
	+ Real-time searching of library (search as you type)
	+ Fullscreen album art mode (via right-click on artwork) (mips)
	+ Improve library searching across meta tags
	+ Sort library search results
	+ Show file path in tooltip for library search results
	+ Improved support for updating less than entire library
	+ Drag-and-drop to copy files from Sonata to a file manager (Kamil)
	+ Ability to show file paths in tag editing window
	+ Use plchanges for faster performance (e.g. add to playlist)
	+ Allow manually fetching remote art when using local art pref (Erik)
	+ Swap mousewheel behavior for progressbar
	+ Only minimize to trayicon on click if focused; raise if not focused
	+ Use new 'listplaylists' command for retrieving playlists
	+ Allow hiding the application's titlebar in preferences