@@ -1,6 +1,7 @@
 v1.6.3 - Pending
 	+ Library artwork caching/displaying improvements
 	+ Lyricwiki screen scraping workaround
+	+ Replace Amazon.com cover art fetching with Rhapsody.com
 	+ Bug: Fix library sorting when adding, e.g., albums to playlist
 	+ Bug: Fix window positioning weirdness when unwithdrawing from systray
 	+ Bug: Fix album being labeled various artists when a duplicate exists
